microservices/identity/identity-k8s-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      name: identity-service-app
  template:
    metadata:
      labels:
        name: identity-service-app
    spec:
      containers:
      - name: application
        image: rendize/identity-service
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: account-configmap-volume
          mountPath: /etc/config
          readOnly: true
        - name: identity-secret-volume
          mountPath: "/etc/mafatih"
          readOnly: true
      volumes:
        - name: account-configmap-volume
          configMap:
            name: account-configmap
        - name: identity-secret-volume
          secret:
            secretName: identity-secret

---
apiVersion: v1
kind: Service
metadata:
  name: identity-service
spec:
  type: ClusterIP
  selector:
    name: identity-service-app
  ports:
  - port: 80
    targetPort: 3000
