microservices/identity/identity-ingress-minion.yml
# Must be applied to the "identity" namespace
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: identity-ingress-minion
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: api.rendize.com
    http:
      paths:
      - path: /identity/.*
        backend:
          serviceName: identity-service
          servicePort: 80
